Fix z-index of favorite icon so it can be clicked on bird details page.

--- a/src/Components/BirdDetailsPg/HighLevelnfo/HighLevelInfo.css
+++ b/src/Components/BirdDetailsPg/HighLevelnfo/HighLevelInfo.css
@@ -40,6 +40,7 @@
 .detail-favorite {
   height: 1.8rem;
   width: 1.8rem;
+  z-index: 9999;
 }
 
 .high-level-blurb {
